@@ -24,6 +24,7 @@ Pretty URLs 1.0RC                                              ???
  ! Base: Always display something for the admin menu. (Admin.php, Subs.php)
  + Base: Installation readme and CONTRIBUTORS file! :)
  + Base: Absolutise relative URLs. (PrettyUrls-Filters.php, QueryString.php)
+ ! Base: Don't cache sc or $context['session_var']. (PrettyUrls-Filters.php)
 
 Pretty URLs 0.9                                                12 November, 2008
 ================================================================================
